--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+a,button,label{cursor: pointer;}
+header{height: 70px;font-size: 20px;line-height: 25px;display: flex;align-items: center;color: #fff;background: #000;}
+.page-name{margin-right: 15px;margin-left: 5px;}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+body{max-width: 1400px;margin: 0 auto;}
+.max-width{width: 100%;}
+a{text-decoration: none;color:#fff;}
+.table-user{width: 100%;}
+.radio-group{
+    margin: 16px 0px;
+}
