--- a/src/app/pages/view/view.component.html
+++ b/src/app/pages/view/view.component.html
@@ -23,7 +23,7 @@
         <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
     </ng-container>
     <ng-container matColumnDef="Gender">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef>Gender</th>
         <td mat-cell *matCellDef="let element"> {{element.userGender}} </td>
     </ng-container>
     <ng-container matColumnDef="City">
