first comit dailog box

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
-<header>
-  <a class="page-name" routerLink="/register">Register</a>
-  <a class="page-name" routerLink="/view">Table</a>
-  <a class="page-name" routerLink="/upadte">Update</a>
-</header>
+<!-- <header>
+ 
+</header> -->
+<p>
+  <mat-toolbar color="primary">
+    <a class="page-name" routerLink="/register">Register</a>
+    <a class="page-name" routerLink="/view">Table</a>
 
+  </mat-toolbar>
+</p>
 
 <router-outlet></router-outlet>
