--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -1,4 +1,4 @@
-<app-navabr></app-navabr>
+<!-- <app-navabr></app-navabr>
 <div class="container">
     <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Favorite food</mat-label>
@@ -10,4 +10,4 @@
         <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
     </mat-form-field>
 
-</div>
+</div> -->
