--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,9 @@ body{max-width: 1400px;margin: 0 auto;}
 .max-width{width: 100%;}
 a{text-decoration: none;color:#fff;}
 .table-user{width: 100%;}
-.radio-group{
-    margin: 16px 0px;
-}
+.radio-group{margin: 16px 0px;}
+.radio-name{margin-right: 16px;}
+.gen{margin-right: 10px;}
+.btn-dailog{margin-left:20px ;}
+html, body { height: 100%; }
+
