--- a/src/app/pages/view/view.component.html
+++ b/src/app/pages/view/view.component.html
@@ -1,11 +1,3 @@
-<!-- <tr *ngFor="let user of userList; let i= index">
-    <td>{{i + 1}}</td>
-    <td>{{user.userName}}</td>
-    <td>{{user.userCity}}</td>
-    <td>{{user.userAddress}}</td>
-    <td>{{user.userEmail}}</td>
-    <td>
-</tr> -->
 <table mat-table [dataSource]="userList" class="mat-elevation-z8" class="table-user">
 
     <!--- Note that these columns can be defined in any order.
@@ -47,7 +39,8 @@
             <button mat-icon-button title="edit data" color="primary" [routerLink]="['/upadte',element.userId]">
                 <mat-icon>edit</mat-icon>
             </button>
-            <!-- <button mat-icon-button title="view" color="accent" [routerLink]="['/viewuser',element.userId]">
+            <!-- <button mat-icon-button title="view" color="accent" [routerLink]="['/viewuser',element.userId]"
+                (click)="openDialog()">
                 <mat-icon>visibility</mat-icon>
             </button> -->
             <button mat-icon-button title="delete data" color="warn" (click)="delete(element.userId)">
