--- a/src/app/pages/update/update.component.html
+++ b/src/app/pages/update/update.component.html
@@ -55,7 +55,7 @@
         </mat-form-field>
 
 
-        <button mat-flat-button title="submit data" color="primary" (click)="update()"
+        <button mat-flat-button title="submit data" color="primary" (click)="update()" id="element.userId"
             [routerLink]="['/view']">Update</button>
     </form>
 </div>
