--- a/src/app/pages/view-user/view-user.component.html
+++ b/src/app/pages/view-user/view-user.component.html
@@ -1,1 +1,9 @@
-<p>view-user works!</p>
+<div>
+    <mat-icon (click)="closeDailog()">close</mat-icon>
+    <p>Are you sure delete a data ?</p>
+    <p>{{data.name}}</p>
+    <p>{{data.email}}</p>
+    <button mat-flat-button id="no-button" [mat-dialog-close]="false" color="warn">No</button>
+    <button mat-flat-button id="yes-button" [mat-dialog-close]="true" color="accent">yes</button>
+
+</div>
