--- a/src/app/pages/view/view.component.html
+++ b/src/app/pages/view/view.component.html
@@ -7,6 +7,7 @@
     <ng-container matColumnDef="No">
         <th mat-header-cell *matHeaderCellDef> No. </th>
         <td mat-cell *matCellDef="let element let i= index"> {{i+1}} </td>
+
     </ng-container>
 
     <!-- Name Column -->
@@ -39,11 +40,8 @@
             <button mat-icon-button title="edit data" color="primary" [routerLink]="['/upadte',element.userId]">
                 <mat-icon>edit</mat-icon>
             </button>
-            <!-- <button mat-icon-button title="view" color="accent" [routerLink]="['/viewuser',element.userId]"
-                (click)="openDialog()">
-                <mat-icon>visibility</mat-icon>
-            </button> -->
-            <button mat-icon-button title="delete data" color="warn" (click)="delete(element.userId)">
+            <button mat-icon-button title="delete data" color="warn" (click)="delete(element.userId)"
+                id="{element.userId}">
                 <mat-icon>delete</mat-icon>
             </button>
         </td>
