--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -1,13 +1,5 @@
-<!-- <app-navabr></app-navabr>
-<div class="container">
-    <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Favorite food</mat-label>
-        <input matInput placeholder="Ex. Pizza" value="Sushi">
-    </mat-form-field>
-
-    <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Leave a comment</mat-label>
-        <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
-    </mat-form-field>
-
-</div> -->
+<div class="usrdata">
+    <h3>Name:{{data.name}}</h3>
+    <h3>email:{{data. email}}</h3>
+    <h3>Addrss:{{data.address}}</h3>
+</div>
