--- a/src/app/pages/view-user/view-user.component.html
+++ b/src/app/pages/view-user/view-user.component.html
@@ -1,9 +1,8 @@
-<div>
-    <mat-icon (click)="closeDailog()">close</mat-icon>
-    <p>Are you sure delete a data ?</p>
+<div class="confirm">
+    <mat-icon (click)="closeDailog()" class="close-ic">close</mat-icon>
+    <h2>Are you sure delete a data ?</h2>
     <p>{{data.name}}</p>
     <p>{{data.email}}</p>
-    <button mat-flat-button id="no-button" [mat-dialog-close]="false" color="warn">No</button>
-    <button mat-flat-button id="yes-button" [mat-dialog-close]="true" color="accent">yes</button>
-
+    <button mat-flat-button id="no-button" [mat-dialog-close]="false" color="warn" class="confirm-btn">No</button>
+    <button mat-flat-button id="yes-button" [mat-dialog-close]="true" color="accent" class="confirm-btn">yes</button>
 </div>
