--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,5 @@ a{text-decoration: none;color:#fff;}
 .btn-dailog{margin-left:20px ;}
 html, body { height: 100%; }
 
+.confirm .close-ic{display: flex;align-items: end;}
+.confirm .confirm-btn:not(:first-child){margin-left:50px}
