--- a/src/app/pages/view/view.component.html
+++ b/src/app/pages/view/view.component.html
@@ -6,7 +6,7 @@
     <!-- Position Column -->
     <ng-container matColumnDef="No">
         <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element let i= index"> {{i+1}} </td>
+        <td mat-cell *matCellDef="let element let i= index"> {{i+1}} id{{element.userId}}</td>
 
     </ng-container>
 
